--- a/graphs/domynormadist.ipynb
+++ b/graphs/domynormadist.ipynb
@@ -24,10 +24,17 @@
     "    # Get the value for G(z) where z is the first value in variable\n",
     "    if step:\n",
     "        print(f'N({my},{std:.4f})')\n",
-    "        print(f'G({variable[0]}) = P(z<{variable[0]}) = {answer:.4f} - {round(answer*100, 2)}%')\n",
-    "        print(f'G({variable[0]}) = P(z>{variable[0]}) = {1-answer:.4f} - {round((1-answer)*100, 2)}%')\n",
-    "    return answer\n",
-    "\n",
+    "        print(f'G({variable[0]}) = P(z<{probability}) = {answer:.4f} - {round(answer*100, 2)}%')\n",
+    "        print(f'G({variable[0]}) = P(z>{probability}) = {1-answer:.4f} - {round((1-answer)*100, 2)}%')\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def set_normal_dist(my, std, n, probability, gap):\n",
     "    z = (probability - my) / (std/math.sqrt(n))\n",
     "    z2 = ((probability+gap) - my) / (std/math.sqrt(n))\n",
@@ -82,21 +89,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sentralgrenseteorem(n,my,var,probability):\n",
     "    std = math.sqrt(var) / math.sqrt(n)\n",
     "    n = var / n\n",
-    "    custom_normal_dist(my,std, probability, False)"
+    "    return custom_normal_dist(my,std, probability, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "for N(0,1) where spread: 95.0% | a: -1.96 - b: 1.96\n"
+     ]
+    }
+   ],
    "source": [
     "# Spredningsintervall (spread) sjanse for at neste obeserverte\n",
     "# verdi skal ligge i spreadnings intervallet, fra a til b\n",
@@ -108,49 +123,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Reverse z lookup, find k (z) N(0,1) TO THE RIGHT\n",
-    "kvantil = 0.025\n",
-    "#print(f'P(z>k) = {find_k(kvantil)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sentralgrenseteorem hvis datamaterialet er større enn 25, så kan denne brukes\n",
-    "n = 25\n",
-    "my = 0\n",
-    "var = 1\n",
-    "probability = 0.22\n",
-    "sentralgrenseteorem(n,my,var,probability)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N(1.1,0.2000)\n",
-      "G(-0.5) = P(z<-0.5) = 0.3085 - 30.85%\n",
-      "G(-0.5) = P(z>-0.5) = 0.6915 - 69.15%\n",
-      "0.6247\n"
+      "P(z>k) = 1.96\n"
      ]
     }
    ],
    "source": [
+    "# Reverse z lookup, find k (z) N(0,1) TO THE RIGHT\n",
+    "kvantil = 0.025\n",
+    "print(f'P(z>k) = {find_k(kvantil)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8643\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sentralgrenseteorem hvis datamaterialet er større enn 25, så kan denne brukes\n",
+    "n = 25\n",
+    "my = 0\n",
+    "var = 1\n",
+    "probability = 0.22\n",
+    "print(sentralgrenseteorem(n,my,var,probability))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Normalfordeling med custom center og std\n",
-    "my = 1.1\n",
-    "std = 0.2\n",
+    "my = 15\n",
+    "std = 6\n",
     "probability = 1\n",
     "custom_normal_dist(my,std,probability, True)\n",
     "between = custom_normal_dist(my,std,1.2,False) - custom_normal_dist(my,std,0.8,False)\n",
@@ -159,54 +179,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "G(0) = P(z≤0) = 0.5000 - 50.0%\n",
-      "G(0) = P(z>0) = 0.5000 - 50.0%\n"
+      "G(1.96) = P(z≤1.96) = 0.9750 - 97.5%\n",
+      "G(1.96) = P(z>1.96) = 0.0250 - 2.5%\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.5"
+       "0.975"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Normalfordleing hvor N(0,1)\n",
-    "normal_dist(0, True)"
+    "normal_dist(1.96, True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability of set < 1.0: 0.0569\n",
-      "Probability of set > 1.0: 0.9431\n",
-      "Probability of 1.0 < set < 1.2 : 0.8862\n"
+      "Probability of set < 0.553: 0.0100\n",
+      "Probability of set > 0.553: 0.9900\n",
+      "Probability of 0.553 < set < 0.7530000000000001 : 0.0601\n"
      ]
     }
    ],
    "source": [
     "# Finn sannsnylighet for at eks vekta av 10 fisker er mer enn 1.2kg\n",
     "my = 1.1\n",
-    "std = 0.2\n",
+    "std = 0.744\n",
     "n = 10\n",
-    "probability = 1.0\n",
+    "probability = 0.553\n",
     "gap = 0.2\n",
     "set_normal_dist(my, std, n, probability, gap)"
    ]
