--- a/domyKI.ipynb
+++ b/domyKI.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,11 +56,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def find_length(alpha,sigma,limit):\n",
     "    z = find_k(alpha)\n",
-    "    return math.pow(((2*z*sigma)/limit),2)\n",
-    "    "
+    "    return math.pow(((2*z*sigma)/limit),2)"
    ]
   },
   {
@@ -81,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_ki(n,std,alpha,mean,pow_numbers):\n",
+    "def find_ki(n,std,alpha,mean,pow_numbers,excepted):\n",
     "    alpha_2 = alpha\n",
     "    if std == None:\n",
-    "        t = find_t(alpha,n)\n",
+    "        t = find_t(alpha,n,pow_numbers,mean,excepted)\n",
     "        s = find_s(pow_numbers,mean)\n",
     "        left = mean - (t*(s/math.sqrt(n)))\n",
     "        right = mean + (t*(s/math.sqrt(n)))\n",
@@ -122,9 +120,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_t(alpha,n):\n",
+    "def find_t(alpha,n,pow_numbers,mean,excepted):\n",
     "    alpha = round((1 - alpha/100)/2,4)\n",
-    "    value = t.ppf(q=1-alpha, df=n-1)\n",
+    "    s = find_s(pow_numbers,mean)\n",
+    "    value = ((mean-excepted)/(s/math.sqrt(n)))\n",
+    "    #value = t.ppf(q=alpha, df=n-1)\n",
     "    return value"
    ]
   },
@@ -138,31 +138,34 @@
     "sigma = 0.9\n",
     "alpha = 95\n",
     "limit = 0.5\n",
-    "find_length(alpha,sigma,limit)\n"
+    "find_length(alpha,sigma,limit)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Median:  2307\n",
-      "Nedrekvartil: [2155, 2185, 2188]\n",
-      "Øvrekvartil: [2382, 2420, 2487]\n",
-      "Estimated std: 114.85433011765994\n",
-      "95% KI for µ: [2219.5053, 2396.0750]\n"
+      "Median: 307  -  Mean: 304.3\n",
+      "Nedrekvartil: [291, 293, 295]\n",
+      "Øvrekvartil: [312, 318, 321]\n",
+      "T-test: -2.00429587359035\n",
+      "Estimated std: 10.570924483906055\n",
+      "95% KI for µ: [311.0000, 297.6000]\n"
      ]
     }
    ],
    "source": [
     "# KONFIDENTSINTERVALL Normalfordelt\n",
-    "pow_numbers = [2487,2355,2188,2290,2420,2155,2185,2382,2307]\n",
-    "n = 9\n",
-    "x = 10\n",
+    "# H0 : μ ≥excpected mot H1 : μ < 311\n",
+    "pow_numbers = [295,308,318,298,312,307,293,291,299,321]\n",
+    "n = 1\n",
+    "x = 1\n",
+    "excepted = 311\n",
     "std = None\n",
     "mean = x/n\n",
     "alpha = 95\n",
@@ -170,6 +173,7 @@
     "if len(pow_numbers)>1:\n",
     "    for number in pow_numbers:\n",
     "        mean += number\n",
+    "    n = len(pow_numbers)\n",
     "    mean = mean/n\n",
     "    sorted_pow_numbers = sorted(pow_numbers)\n",
     "    median = sorted_pow_numbers[round(n/2)]\n",
@@ -178,13 +182,15 @@
     "\n",
     "    nedre_liste = []\n",
     "    ovre_liste = []\n",
-    "    print('Median: ',median)\n",
+    "    print(f'Median: {median}  -  Mean: {mean}')\n",
     "    for x in range(0,nedre+1):\n",
     "        nedre_liste.append(sorted_pow_numbers[x])\n",
     "    for x in range(ovre-1,len(pow_numbers)):\n",
     "        ovre_liste.append(sorted_pow_numbers[x])\n",
     "    print(f'Nedrekvartil: {nedre_liste}\\nØvrekvartil: {ovre_liste}')\n",
-    "find_ki(n,std,alpha,mean,pow_numbers)\n"
+    "t_value = find_t(alpha,n,pow_numbers,mean,excepted)\n",
+    "print('T-test:',t_value)\n",
+    "find_ki(n,std,alpha,mean,pow_numbers,excepted)\n"
    ]
   },
   {
@@ -211,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,18 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "95% KI for σ2: [0.0068,0.0163]\n",
-      "95% KI for σ: [0.0825,0.1278]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# KI for Variance σ2 and Standard deviation σ\n",
     "n = 41\n",
