--- a/graphs/domynormadist.ipynb
+++ b/graphs/domynormadist.ipynb
@@ -52,26 +52,32 @@
     "def normal_dist(z, do_print):\n",
     "    # KUMULATIV STANDARDNORMALFORDELING N(1,0)\n",
     "    answer = float(f'{scipy.stats.norm.cdf(z,0):.4f}')\n",
+    "    answer2 = float(f'{scipy.stats.norm.cdf(-z,0):.4f}')\n",
     "    # Get the value for G(z) where N(0,1)\n",
     "    if do_print == True:\n",
     "        print(f'G({z}) = P(z≤{z}) = {answer:.4f} - {round(answer*100, 2)}%')\n",
     "        print(f'G({z}) = P(z>{z}) = {1-answer:.4f} - {round((1-answer)*100, 2)}%')\n",
-    "    return answer"
+    "        print(f'G({z}) = P({-z}≤z≤{z}) = {answer-answer2:.4f} - {round(answer*100, 2)}%')\n",
+    "    else:\n",
+    "        return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_k(kvantil):\n",
     "    #kvantil = round(kvantil,4)\n",
-    "    for x in range(-3,3500):\n",
+    "    for x in range(-4000,4000):\n",
     "        answer = normal_dist(x/1000, False)\n",
-    "        #print(answer)\n",
-    "        if answer == 1-kvantil:\n",
-    "            return x/1000"
+    "        if answer == kvantil:\n",
+    "            print(f'G(z≤k) = {x/10000}')\n",
+    "            return x/10000\n",
+    "        if answer-0.0001 == kvantil:\n",
+    "            print(f'G(z≤k) = {x/10000}')\n",
+    "            return x/10000"
    ]
   },
   {
@@ -89,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,17 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "for N(0,1) where spread: 95.0% | a: -1.96 - b: 1.96\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Spredningsintervall (spread) sjanse for at neste obeserverte\n",
     "# verdi skal ligge i spreadnings intervallet, fra a til b\n",
@@ -123,36 +121,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P(z>k) = 1.96\n"
+      "G(z≤k) = 0.196\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.196"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Reverse z lookup, find k (z) N(0,1) TO THE RIGHT\n",
-    "kvantil = 0.025\n",
-    "print(f'P(z>k) = {find_k(kvantil)}')"
+    "# kvantil MÅ VÆRE MINDRE ENN 5 SIFFRE! FIND Z VALUE\n",
+    "# Hvis jeg skal finne gjennom alpha så er kvantilen = 1-alpha\n",
+    "kvantil = 1-0.025\n",
+    "find_k(kvantil)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8643\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sentralgrenseteorem hvis datamaterialet er større enn 25, så kan denne brukes\n",
     "n = 25\n",
@@ -164,70 +166,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(X ≤ 207): 0.031\n",
+      "P(X ≥ 207): 0.969\n",
+      "P(207 ≤ X ≤ 293): 0.8206000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Normalfordeling med custom center og std\n",
+    "my = 263\n",
+    "std = 30\n",
+    "probability = 207\n",
+    "gap = 86\n",
+    "\n",
+    "print(f'P(X ≤ {probability}): {custom_normal_dist(my,std,probability,False)}')\n",
+    "print(f'P(X ≥ {probability}): {1-custom_normal_dist(my,std,probability,False)}')\n",
+    "print(f'P({probability} ≤ X ≤ {gap+probability}): {(custom_normal_dist(my,std,probability+gap+1,False)) - (custom_normal_dist(my,std,probability-1,False))}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Normalfordeling med custom center og std\n",
-    "my = 15\n",
-    "std = 6\n",
-    "probability = 1\n",
-    "custom_normal_dist(my,std,probability, True)\n",
-    "between = custom_normal_dist(my,std,1.2,False) - custom_normal_dist(my,std,0.8,False)\n",
-    "print(between)"
+    "# Normalfordleing hvor bruk Z N(0,1)\n",
+    "normal_dist(0.8500, True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "G(1.96) = P(z≤1.96) = 0.9750 - 97.5%\n",
-      "G(1.96) = P(z>1.96) = 0.0250 - 2.5%\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.975"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Normalfordleing hvor N(0,1)\n",
-    "normal_dist(1.96, True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Probability of set < 0.553: 0.0100\n",
-      "Probability of set > 0.553: 0.9900\n",
-      "Probability of 0.553 < set < 0.7530000000000001 : 0.0601\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Finn sannsnylighet for at eks vekta av 10 fisker er mer enn 1.2kg\n",
-    "my = 1.1\n",
-    "std = 0.744\n",
-    "n = 10\n",
-    "probability = 0.553\n",
-    "gap = 0.2\n",
+    "my = 1.8500\n",
+    "std = 1.3601\n",
+    "n = 5\n",
+    "probability = 4\n",
+    "gap = 1\n",
     "set_normal_dist(my, std, n, probability, gap)"
    ]
   }
