--- a/domybayes.ipynb
+++ b/domybayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,19 +364,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# P off A\n",
-    "POA = 0.01\n",
+    "POA = 0.4\n",
     "# P off B\n",
     "POB = 0.5\n",
     "\n",
     "# P off A given B\n",
     "POAGB = None\n",
     "# P off B given A\n",
-    "POBGA = None\n",
+    "POBGA = 0.0002\n",
     "\n",
     "# P off A and B | P off B and A (same)\n",
     "POAAB = None\n",
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -399,14 +399,14 @@
      "text": [
       "\n",
       "\n",
-      "P of A: 1.0%\n",
+      "P of A: 40.0%\n",
       "P of B: 50.0%\n",
-      "P off A given B: 1.0%\n",
-      "P off B given A: 50.0%\n",
-      "P off A and B: 0.5%\n",
-      "P off B and A: 25.0%\n",
-      "P off A or B: 50.5%\n",
-      "P off B or A: 26.0%\n",
+      "P off A given B: 0.016%\n",
+      "P off B given A: 0.02%\n",
+      "P off A and B ∩: 0.008%\n",
+      "P off B and A ∩: 0.01%\n",
+      "P off A or B ∪: 89.992%\n",
+      "P off B or A ∪: 89.99000000000001%\n",
       "\n",
       "\n"
      ]
@@ -422,19 +422,39 @@
     "print(f'P off A given B: {find_POAGB(POA, POB, POAGB, POBGA, POAAB, POBAA, POAOB, POBOA, PONA, PONB, POBGNA, POAGNB, POAANB, POBANA, POAONB, POBONA)*100}%')\n",
     "print(f'P off B given A: {find_POBGA(POA, POB, POAGB, POBGA, POAAB, POBAA, POAOB, POBOA, PONA, PONB, POBGNA, POAGNB, POAANB, POBANA, POAONB, POBONA)*100}%')\n",
     "\n",
-    "print(f'P off A and B: {find_POAAB(POA, POB, POAGB, POBGA, POAAB, POBAA, POAOB, POBOA, PONA, PONB, POBGNA, POAGNB, POAANB, POBANA, POAONB, POBONA)*100}%')\n",
-    "print(f'P off B and A: {find_POBAA(POA, POB, POAGB, POBGA, POAAB, POBAA, POAOB, POBOA, PONA, PONB, POBGNA, POAGNB, POAANB, POBANA, POAONB, POBONA)*100}%')\n",
+    "print(f'P off A and B ∩: {find_POAAB(POA, POB, POAGB, POBGA, POAAB, POBAA, POAOB, POBOA, PONA, PONB, POBGNA, POAGNB, POAANB, POBANA, POAONB, POBONA)*100}%')\n",
+    "print(f'P off B and A ∩: {find_POBAA(POA, POB, POAGB, POBGA, POAAB, POBAA, POAOB, POBOA, PONA, PONB, POBGNA, POAGNB, POAANB, POBANA, POAONB, POBONA)*100}%')\n",
     "\n",
-    "print(f'P off A or B: {find_POAOB(POA, POB, POAGB, POBGA, POAAB, POBAA, POAOB, POBOA, PONA, PONB, POBGNA, POAGNB, POAANB, POBANA, POAONB, POBONA)*100}%')\n",
-    "print(f'P off B or A: {find_POBOA(POA, POB, POAGB, POBGA, POAAB, POBAA, POAOB, POBOA, PONA, PONB, POBGNA, POAGNB, POAANB, POBANA, POAONB, POBONA)*100}%')\n",
+    "print(f'P off A or B ∪: {find_POAOB(POA, POB, POAGB, POBGA, POAAB, POBAA, POAOB, POBOA, PONA, PONB, POBGNA, POAGNB, POAANB, POBANA, POAONB, POBONA)*100}%')\n",
+    "print(f'P off B or A ∪: {find_POBOA(POA, POB, POAGB, POBGA, POAAB, POBAA, POAOB, POBOA, PONA, PONB, POBGNA, POAGNB, POAANB, POBANA, POAONB, POBONA)*100}%')\n",
     "print('\\n')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "NOT ---------------------\n",
+      "P of not A: 80.0%\n",
+      "P of not B: 99.99%\n",
+      "P off A given not B: 0.004000400040004%\n",
+      "P off B given not A: 0.005%\n",
+      "P off A and not B: 0.004%\n",
+      "P off B and not A: 2e-06%\n",
+      "P off A or not B: 119.98599999999999%\n",
+      "P off B or not A: 80.00999800000001%\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# NOT\n",
     "print('\\n')\n",
