added hypothesis testing
works pretty decent ngl :+1:

--- a/domyKI.ipynb
+++ b/domyKI.ipynb
@@ -43,11 +43,15 @@
    "outputs": [],
    "source": [
     "def find_k(kvantil):\n",
-    "    kvantil = round((1 - kvantil/100)/2,4)\n",
-    "    for x in range(-3,3500):\n",
+    "    #kvantil = round(kvantil,4)\n",
+    "    for x in range(-4000,4000):\n",
     "        answer = normal_dist(x/1000, False)\n",
-    "        if answer == 1-kvantil:\n",
-    "            return x/1000"
+    "        if answer == kvantil:\n",
+    "            print(f'G(z≤k) = {x/10000}')\n",
+    "            return x/10000\n",
+    "        if answer-0.0001 == kvantil:\n",
+    "            print(f'G(z≤k) = {x/10000}')\n",
+    "            return x/10000"
    ]
   },
   {
@@ -93,6 +97,7 @@
     "        print(f'Estimated std: {s}')\n",
     "    else:\n",
     "        alpha = find_k(alpha)\n",
+    "        print(alpha)\n",
     "        antstd = std/(math.sqrt(n))\n",
     "        left = mean - (alpha*antstd)\n",
     "        right = mean + (alpha*antstd)\n",
@@ -143,32 +148,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Median: 307  -  Mean: 304.3\n",
-      "Nedrekvartil: [291, 293, 295]\n",
-      "Øvrekvartil: [312, 318, 321]\n",
-      "T-test: -2.00429587359035\n",
-      "Estimated std: 10.570924483906055\n",
-      "95% KI for µ: [311.0000, 297.6000]\n"
+      "G(z≤k) = 0.2053\n",
+      "0.2053\n",
+      "0.98% KI for µ: [2.7054, 3.8244]\n"
      ]
     }
    ],
    "source": [
     "# KONFIDENTSINTERVALL Normalfordelt\n",
     "# H0 : μ ≥excpected mot H1 : μ < 311\n",
-    "pow_numbers = [295,308,318,298,312,307,293,291,299,321]\n",
-    "n = 1\n",
-    "x = 1\n",
-    "excepted = 311\n",
-    "std = None\n",
+    "pow_numbers = []\n",
+    "n = 39\n",
+    "x = 127.33\n",
+    "excepted = 0\n",
+    "std = 17.02\n",
     "mean = x/n\n",
-    "alpha = 95\n",
+    "alpha = 0.98\n",
     "\n",
     "if len(pow_numbers)>1:\n",
     "    for number in pow_numbers:\n",
@@ -188,8 +190,9 @@
     "    for x in range(ovre-1,len(pow_numbers)):\n",
     "        ovre_liste.append(sorted_pow_numbers[x])\n",
     "    print(f'Nedrekvartil: {nedre_liste}\\nØvrekvartil: {ovre_liste}')\n",
-    "t_value = find_t(alpha,n,pow_numbers,mean,excepted)\n",
-    "print('T-test:',t_value)\n",
+    "    t_value = find_t(alpha,n,pow_numbers,mean,excepted)\n",
+    "    print('T-test:',t_value)\n",
+    "    \n",
     "find_ki(n,std,alpha,mean,pow_numbers,excepted)\n"
    ]
   },
@@ -217,11 +220,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def var_and_std_KI(n,s,alpha):\n",
     "    alpha_up = 1-(1 - alpha/100)/2\n",
     "    alpha_down = (1 - alpha/100)/2\n",
@@ -237,14 +239,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95% KI for σ2: [10.1622,30.9733]\n",
+      "95% KI for σ: [3.1878,5.5654]\n"
+     ]
+    }
+   ],
    "source": [
     "# KI for Variance σ2 and Standard deviation σ\n",
-    "n = 41\n",
-    "s = 0.0103\n",
-    "alpha = 95\n",
+    "n = 36\n",
+    "s = 17.02\n",
+    "alpha = 98\n",
     "\n",
     "var_and_std_KI(n,s,alpha)"
    ]
