--- a/graphs/domynormadist.ipynb
+++ b/graphs/domynormadist.ipynb
@@ -64,20 +64,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_k(kvantil):\n",
-    "    #kvantil = round(kvantil,4)\n",
+    "    kvantil = round(kvantil,4)\n",
     "    for x in range(-4000,4000):\n",
     "        answer = normal_dist(x/1000, False)\n",
     "        if answer == kvantil:\n",
-    "            print(f'G(z≤k) = {x/10000}')\n",
-    "            return x/10000\n",
+    "            #print(f'G(z≤k) = {x/10000}')\n",
+    "            return x/1000\n",
     "        if answer-0.0001 == kvantil:\n",
-    "            print(f'G(z≤k) = {x/10000}')\n",
-    "            return x/10000"
+    "            #print(f'G(z≤k) = {x/10000}')\n",
+    "            return x/1000"
    ]
   },
   {
@@ -88,8 +88,8 @@
    "source": [
     "def find_leftandright(my, std, kvantil):\n",
     "    k = find_k(kvantil)\n",
-    "    a = round(my - (k * std), 4)\n",
-    "    b = round(my + (k * std), 4)\n",
+    "    a = round(my + ((k * std)), 4)\n",
+    "    b = round(my - ((k * std)), 4)\n",
     "    return [a,b]"
    ]
   },
@@ -113,35 +113,17 @@
    "source": [
     "# Spredningsintervall (spread) sjanse for at neste obeserverte\n",
     "# verdi skal ligge i spreadnings intervallet, fra a til b\n",
-    "my = 0\n",
-    "std = 1\n",
+    "my = 50\n",
+    "std = 2\n",
     "spread = 0.95\n",
     "print(f'for N({my},{std}) where spread: {spread*100}% | a: {find_leftandright(my,std,(1-spread)/2)[0]} - b: {find_leftandright(my,std,(1-spread)/2)[1]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "G(z≤k) = 0.196\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.196"
-      ]
-     },
-     "execution_count": 216,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Reverse z lookup, find k (z) N(0,1) TO THE RIGHT\n",
     "# kvantil MÅ VÆRE MINDRE ENN 5 SIFFRE! FIND Z VALUE\n",
@@ -166,25 +148,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P(X ≤ 207): 0.031\n",
-      "P(X ≥ 207): 0.969\n",
-      "P(207 ≤ X ≤ 293): 0.8206000000000001\n"
+      "P(X ≤ 100): 0.0038\n",
+      "P(X ≥ 100): 0.9962\n",
+      "P(100 ≤ X ≤ 100): 0.0016000000000000003\n"
      ]
     }
    ],
    "source": [
     "# Normalfordeling med custom center og std\n",
-    "my = 263\n",
-    "std = 30\n",
-    "probability = 207\n",
-    "gap = 86\n",
+    "my = 140\n",
+    "std = 15\n",
+    "\n",
+    "x = 1000\n",
+    "#std = std / math.sqrt(x)\n",
+    "\n",
+    "probability = 100\n",
+    "gap = 0\n",
     "\n",
     "print(f'P(X ≤ {probability}): {custom_normal_dist(my,std,probability,False)}')\n",
     "print(f'P(X ≥ {probability}): {1-custom_normal_dist(my,std,probability,False)}')\n",
