--- a/domyestimation.ipynb
+++ b/domyestimation.ipynb
@@ -17,11 +17,15 @@
    "outputs": [],
    "source": [
     "def find_k(kvantil):\n",
-    "    kvantil = round((1 - kvantil/100)/2,4)\n",
-    "    for x in range(-3,3500):\n",
+    "    #kvantil = round(kvantil,4)\n",
+    "    for x in range(-4000,4000):\n",
     "        answer = normal_dist(x/1000, False)\n",
-    "        if answer == 1-kvantil:\n",
-    "            return x/1000"
+    "        if answer == kvantil:\n",
+    "            print(f'G(z≤k) = {x/10000}')\n",
+    "            return x/10000\n",
+    "        if answer-0.0001 == kvantil:\n",
+    "            print(f'G(z≤k) = {x/10000}')\n",
+    "            return x/10000"
    ]
   },
   {
@@ -42,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,22 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Estimated My (µ): 0.5600\n",
-      "\n",
-      "SE(p) Estimated Standard deviation (σ): 0.0993\n",
-      "\n",
-      "Binomal(25.0000,0.5600) ---> Normal(14.0000,6.1600)\n",
-      "95% KI: [0.3654,0.7546]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Binomial Estimation\n",
     "# Eks 23 syk av 300\n",
@@ -127,21 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Estimated lambda (λ): 1.8500\n",
-      "Variance (σ2) 1.3601\n",
-      "Estimated Standard deviation (σ): 1.3601\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Poisson Multiple events over time til normal\n",
     "events = [0,1,2,3]\n",
@@ -159,19 +138,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "((λ * t): 26.0 ≥ 10)\n",
-      "Poisson: (0.5532,0.56) ---> Normal(14.3830,3.7925)\n",
-      "95% KI for λ: [0.3406,0.7658]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Poisson Single numbers til normal\n",
     "# y hendelser over t tiden (y = y1+y2+y3, t = 3)\n",
@@ -179,7 +148,7 @@
     "# G(2.3452) = P(z<2.3452) = 0.9542 - 95.42% chance of a tornado within 2.34 years\n",
     "t = 47\n",
     "y = 26\n",
-    "alpha = 95\n",
+    "alpha = 0.95\n",
     "# Get data from cell 1 over\n",
     "lmbd = y/t\n",
     "\n",
