hypotest buff @08:30, time for zzz
exam in exactly 2 days on 30min

--- a/domyhypotest.ipynb
+++ b/domyhypotest.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import scipy.stats\n",
-    "import math"
+    "import math\n",
+    "from scipy.stats import t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,7 @@
     "            print(f'Her kan vi se at x̄ \"{found_average}\" IKKE er mye mindre enn vår forventet verdi \"{excpected_average}\",\\nsom vil si at vi beholder vår H0 hypotese på {alpha*100}% nivå\\n')\n",
     "            print(f'Hva er sjansen for P(x̄≤{found_average} | µ={excpected_average})')\n",
     "            print(f'Finn p-verdi')\n",
-    "            show_work(excpected_average,found_average,n,None,alpha,None,None,'find_p_single')\n",
+    "            show_work(excpected_average,found_average,n,None,alpha,None,None,None,'find_p_single')\n",
     "            find_strength(found_average,a,b,n,std)\n",
     "    if valg == 'opp':\n",
     "        print(f'H1: µ > {excpected_average}')\n",
@@ -56,7 +57,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_hypo_ukjent(n,excpected_average,alpha,data,valg):\n",
+    "    found_average, std, median = get_data_info(data)\n",
+    "    print(f'\\nGjennomsnitt: {found_average}, Median: {median}, Standardavvik: {std}')\n",
+    "    if valg == 'ned':\n",
+    "        print(f'H1: µ < {excpected_average}')\n",
+    "        print(f'H0: µ ≥ {excpected_average}')\n",
+    "        print(f'Forkaster H0 dersom µ er mye mindre enn {excpected_average}')\n",
+    "\n",
+    "        t_v, value = find_t(alpha,n,data,excpected_average)\n",
+    "        print(f'Mye mindre er dersom x̄ ≤ T')\n",
+    "        \n",
+    "        show_work(excpected_average,found_average,n,None,alpha,None,None,None,'find_tobs')\n",
+    "        print(f'Testobservator T: {value:.4f}')\n",
+    "        print(f'Forkastningsområde: (-∞, {t_v}] ∪ [{-t_v}, ∞)')\n",
+    "        if value <= -t_v:\n",
+    "            print(f'Testobservatoren er innenfor vårt forkastningsområdet, som betyr at vi beholder H0 på {alpha*100}% nivå')\n",
+    "        else:\n",
+    "            print(f'Testobservatoren er ikke innenfor vårt forkastningsområdet, som betyr at vi forkaster H0 på {alpha*100}% nivå')\n",
+    "        \n",
+    "    if valg == 'opp':\n",
+    "        print(f'H1: µ > {excpected_average}')\n",
+    "        print(f'H0: µ ≤ {excpected_average}')\n",
+    "        print(f'Forkaster H0 dersom µ er mye mer enn {excpected_average}')\n",
+    "\n",
+    "        t_v, value = find_t(alpha,n,data,excpected_average)\n",
+    "        print(f'Mye mer er dersom x̄ ≥ T')\n",
+    "        \n",
+    "        show_work(excpected_average,found_average,n,None,alpha,None,None,None,'find_tobs')\n",
+    "        print(f'Testobservator T: {value:.4f}')\n",
+    "        print(f'Forkastningsområde: (-∞, {t_v}] ∪ [{-t_v}, ∞)')\n",
+    "        if value >= t_v:\n",
+    "            print(f'Testobservatoren er innenfor vårt forkastningsområdet, som betyr at vi beholder H0 på {alpha*100}% nivå')\n",
+    "        else:\n",
+    "            print(f'Testobservatoren er ikke innenfor vårt forkastningsområdet, som betyr at vi forkaster H0 på {alpha*100}% nivå')\n",
+    "        \n",
+    "\n",
+    "\n",
+    "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_hypo_to(excpected_average,found_average,n,std,alpha):\n",
+    "    print(f'H1: µ ≠ {excpected_average}')\n",
+    "    print(f'H0: µ = {excpected_average}')\n",
+    "    a, b = find_leftandright(excpected_average,std,n,alpha)\n",
+    "    print(f'P(x̄<k1, eller x̄>k2 | µ={excpected_average})\\n')\n",
+    "    show_work(excpected_average,found_average,n,None,alpha,None,None,None,'kvantiler')\n",
+    "    print(f'Forkastningsområde: (-∞, {a}] ∪ [{b}, ∞)')\n",
+    "    check_area(a,b,found_average,alpha)\n",
+    "    print(f'Finn p-verdi')\n",
+    "    show_work(excpected_average,found_average,n,std,alpha,None,None,None,'find_p_double')\n",
+    "    find_strength(found_average,a,b,n,std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,26 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_hypo_to(excpected_average,found_average,n,std,alpha):\n",
-    "    print(f'H1: µ ≠ {excpected_average}')\n",
-    "    print(f'H0: µ = {excpected_average}')\n",
-    "    a, b = find_leftandright(excpected_average,std,n,alpha)\n",
-    "    print(f'P(x̄<k1, eller x̄>k2 | µ={excpected_average})\\n')\n",
-    "    show_work(excpected_average,found_average,n,None,alpha,None,None,None,'kvantiler')\n",
-    "    print(f'Forkastningsområde: (-∞, {a}] ∪ [{b}, ∞)')\n",
-    "    check_area(a,b,found_average)\n",
-    "    print(f'Finn p-verdi')\n",
-    "    show_work(excpected_average,found_average,n,std,alpha,None,None,None,'find_p_double')\n",
-    "    find_strength(found_average,a,b,n,std)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,33 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def check_area(a,b,found_average):\n",
-    "    if found_average >= a and found_average <= b:\n",
-    "        print(f'(x̄: {found_average}) er innenfor forkastningsområdet så H0 forkastes ikke\\n')\n",
-    "    else:\n",
-    "        print(f'(x̄: {found_average}) er ikke innenfor forkastningsområdet så H0 må forkastes\\n')\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 518,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def normal_dist(z):\n",
-    "    # KUMULATIV STANDARDNORMALFORDELING N(1,0)\n",
-    "    answer = float(f'{scipy.stats.norm.cdf(z,0):.4f}')\n",
-    "    return answer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +162,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_t(alpha,n,data,excpected_average):\n",
+    "    mean = sum(data) /len(data)\n",
+    "    s = find_s(data,mean)[0]\n",
+    "    t_v = round(t.ppf(alpha,n-1),4)\n",
+    "    value = ((mean-excpected_average)/(s/math.sqrt(n)))\n",
+    "    return [t_v, value]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_s(data,mean):\n",
+    "    emp = 0\n",
+    "    for num in data:\n",
+    "        emp += (math.pow((num-mean),2))\n",
+    "    s = round(math.sqrt(emp/((len(data)-1))),4)\n",
+    "    return [s, emp]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_area(a,b,found_average,alpha):\n",
+    "    if found_average >= a and found_average <= b:\n",
+    "        print(f'(x̄: {found_average}) er innenfor forkastningsområdet så H0 forkastes ikke på {alpha*100}% nivå\\n')\n",
+    "    else:\n",
+    "        print(f'(x̄: {found_average}) er ikke innenfor forkastningsområdet så H0 må forkastes på {alpha*100}% nivå\\n')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normal_dist(z):\n",
+    "    # KUMULATIV STANDARDNORMALFORDELING N(1,0)\n",
+    "    answer = float(f'{scipy.stats.norm.cdf(z,0):.4f}')\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +247,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_data_info(data):\n",
+    "    mean = round(sum(data) /len(data),4)\n",
+    "    data_sorted = sorted(data)\n",
+    "    median = data_sorted[round(len(data)/2)]\n",
+    "    std = round(find_s(data,mean)[0],4)\n",
+    "    return [mean, std ,median]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,55 +311,32 @@
     "        p = (find_p(excpected_average,found_average,std,n))\n",
     "        p = round(2*((1-normal_dist(p))),4)\n",
     "        print(f'2*P(x̄≥{found_average}) = 2*(1-G(({found_average} - {excpected_average})/{antstd} = 2*(1-G({(found_average - excpected_average)/antstd}) = {p}')\n",
-    "        print(f'P-verdien = {p}, altså det er {round(p*100,4)}% sjanse for at et av våre resultater er ≥ {found_average}\\n')"
+    "        print(f'P-verdien = {p}, altså det er {round(p*100,4)}% sjanse for at et av våre resultater er ≥ {found_average}\\n')\n",
+    "    if work_type == 'find_s':\n",
+    "        print(f's = sqrt({find_s(data,found_average)[1]}/({len(data)}-1)) = {find_s(data,found_average)[0]}')\n",
+    "    if work_type == 'find_tobs':\n",
+    "        found_average = get_data_info(data)[0]\n",
+    "        show_work(excpected_average,found_average,n,antstd,alpha,alpha_original,left,right,'find_s')\n",
+    "        print(f'T = (({found_average} - {excpected_average})/({find_s(data,found_average)[0]}/sqrt({n}))) = {round(find_t(alpha,n,data,excpected_average)[1],4)}\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "H1: µ > 250\n",
-      "H0: µ ≤ 250\n",
-      "Forkaster H0 dersom µ er mye større enn 250\n",
-      "\n",
-      "Finn hva \"mye større\" er\n",
-      "P(x̄≥k | µ=250) = 0.05\n",
-      "G((k+250)/1.5) = 0.05\n",
-      "(k+250)/1.5 = 1.645\n",
-      "k = 250 + (1.645 * 1.5) = 252.4675\n",
-      "\n",
-      "Mye større er dersom x̄ ≥ 252.4675\n",
-      "Her kan vi se at x̄ \"247.53\" IKKE er mye større enn vår forventet verdi \"250\",\n",
-      "som vil si at vi beholder vår H0 hypotese på 5.0% nivå\n",
-      "\n",
-      "Hva er sjansen for P(x̄≥247.53 | µ=250)\n",
-      "Finn p-verdi\n",
-      "1-G((247.53 - 250) / 1.5) = 1-G(-1.6467)\n",
-      "1-G(-1.6467) = 0.9502\n",
-      "P-verdien = 0.9502, altså det er 95.02% sjanse for at et av våre resultater er ≥ 247.53\n",
-      "\n",
-      "Styrken av P(forkaster H0 | µ = 247.53) er: 0.5012 altså 50.12%\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Fler sidig\n",
-    "# Found average = x̄\n",
+    "# en sidig\n",
+    "# n = tries\n",
     "# Excpected average = µ\n",
-    "# Alpha = signifikansnivå\n",
     "# Std = σ\n",
-    "n = 4\n",
-    "excpected_average = 250\n",
-    "found_average = 247.53\n",
+    "# Alpha = signifikansnivå\n",
+    "# Found average = x̄\n",
+    "n = 2708\n",
+    "excpected_average = 2536\n",
     "std = 3\n",
     "alpha = 0.05\n",
+    "found_average = 247.53\n",
     "\n",
     "#valg = 'ned'\n",
     "valg = 'opp'\n",
@@ -280,48 +346,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "H1: µ ≠ 50\n",
-      "H0: µ = 50\n",
-      "P(x̄<k1, eller x̄>k2 | µ=50)\n",
-      "\n",
-      "Finner k1\n",
-      "P(x̄<k1) = 0.025)\n",
-      "P(x̄<k1) = G((k1 - 50) / 2) = 0.025)\n",
-      "(k1 - 50)/2 = -1.96\n",
-      "k1 = 50 - (1.96 * 2.0) = 46.08\n",
-      "\n",
-      "Finner k2\n",
-      "P(x̄<k2) = 0.025\n",
-      "P(x̄<k2) = G((k2 - 50) / 2) = 0.025\n",
-      "(k2 - 50)/2 = -1.96\n",
-      "k2 = 50 + (1.96 * 2.0) = 53.92\n",
-      "\n",
-      "\n",
-      "Forkast H0 hvis x̄ ≤ 46.08 eller x̄ ≥ 53.92\n",
-      "Forkastningsområde: (-∞, 46.08] ∪ [53.92, ∞)\n",
-      "(x̄: 49) er innenfor forkastningsområdet så H0 forkastes ikke\n",
-      "\n",
-      "Finn p-verdi\n",
-      "2*P(x̄≥49) = 2*(1-G((49 - 50)/2.0 = 2*(1-G(-0.5) = 1.383\n",
-      "P-verdien = 1.383, altså det er 138.3% sjanse for at et av våre resultater er ≥ 49\n",
-      "\n",
-      "Styrken av P(forkaster H0 | µ = 49) er: 0.079 altså 7.9%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To sidig\n",
-    "# Found average = x̄\n",
+    "# n = tries\n",
     "# Excpected average = µ\n",
-    "# Alpha = signifikansnivå\n",
     "# Std = σ\n",
+    "# Alpha = signifikansnivå\n",
+    "# Found average = x̄\n",
     "n = 9\n",
     "excpected_average = 50\n",
     "std = 6\n",
@@ -333,6 +367,51 @@
     "found_average = 49\n",
     "\n",
     "find_hypo_to(excpected_average,found_average,n,std,alpha/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1049,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Gjennomsnitt: 135.0, Median: 149, Standardavvik: 19.9165\n",
+      "H1: µ < 140\n",
+      "H0: µ ≥ 140\n",
+      "Forkaster H0 dersom µ er mye mindre enn 140\n",
+      "Mye mindre er dersom x̄ ≤ T\n",
+      "s = sqrt(1190.0/(4-1)) = 19.9165\n",
+      "T = ((135.0 - 140)/(19.9165/sqrt(4))) = -0.5021\n",
+      "\n",
+      "Testobservator T: -0.5021\n",
+      "Forkastningsområde: (-∞, -2.3534] ∪ [2.3534, ∞)\n",
+      "Testobservatoren er innenfor vårt forkastningsområdet, som betyr at vi beholder H0 på 5.0% nivå\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ukjent sigma\n",
+    "# n = tries\n",
+    "# Excpected average = µ\n",
+    "# Std = σ = ukjent\n",
+    "# Alpha = signifikansnivå\n",
+    "# Data = list of given numbers\n",
+    "n = 215\n",
+    "excpected_average = 140\n",
+    "alpha = 0.05\n",
+    "data = []\n",
+    "\n",
+    "valg = 'ned'\n",
+    "#valg = 'opp'\n",
+    "find_hypo_ukjent(n,excpected_average,alpha,data,valg)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
